Fix side bar on mobile view

--- a/src/app/pages/layout/components/side-nav/side-nav.component.scss
+++ b/src/app/pages/layout/components/side-nav/side-nav.component.scss
@@ -1,7 +1,8 @@
 .aside {
     // Structure Block 
     background-color: #fff;
-    height: calc(100vh - 106px);
+    // height: calc(100vh - 106px);
+    height: 100%;
     width: 69px;
     border-radius: 8px;
 
